--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         gtag('config', 'UA-115420733-1');
     </script>
     <!-- End GA Script -->
+
     <title>Pity Pattern</title>
     <meta property="og:title" content="Pity Pattern" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" href="/assets/img/vinyl.png">
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -47,7 +49,7 @@
         <div class="container">
             <div class="row" id="hero-row">
                 <div class="col-lg-6 col-sm-8 mx-auto mt-3">
-                    <img src="assets/imgs/PP-SAAFE-Window.png" class="img-fluid" />
+                    <img src="assets/img/PP-SAAFE-Window.png" class="img-fluid" />
                 </div>
                 <div class="col-lg-6 col-sm-12 mt-3">
                     <h2>Pity Pattern</h2>
@@ -55,13 +57,13 @@
                     <h2>1/8/2019</h2>
                     <div class="row mx-auto mt-4 rounded">
                         <div class="my-auto mx-auto w-75 rounded">
-                            <img src="assets/imgs/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo" />
+                            <img src="assets/img/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo" />
                         </div> 
                         <div class="my-auto mx-auto w-75 rounded">
-                            <img src="assets/imgs/logos/bandcamp-logo.png" class="img-fluid service-logo" />
+                            <img src="assets/img/logos/bandcamp-logo.png" class="img-fluid service-logo" />
                         </div>
                         <div class="my-auto mx-auto w-75 rounded">
-                            <img src="assets/imgs/logos/Apple_Music_Logo.png" class="img-fluid service-logo" />
+                            <img src="assets/img/logos/Apple_Music_Logo.png" class="img-fluid service-logo" />
                         </div> 
                     </div>
                 </div>
@@ -71,7 +73,7 @@
     <section id="video">
         <div class="container">
             <div class="row my-3">
-                <h3>Hey, we're Pity Pattern (Video)</h3>
+                <h3>Hey, we're Pity Pattern (video)</h3>
             </div>
         </div>
         <div class="embed-responsive embed-responsive-16by9">
@@ -81,7 +83,7 @@
     <section id="recording-pics">
         <div class="container">
             <div class="row my-3">
-                <h3>Recording Pictures (2018)</h3>
+                <h3>Recording Pictures</h3>
             </div>
         </div>
         <div class="container">
@@ -100,34 +102,34 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/listening_back.jpg" alt="Listening back">
+                        <img class="d-block w-100" src="assets/img/recording-pics/listening_back.jpg" alt="Listening back">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/devin_tracking_bass.jpg" alt="Devin tracking bass">
+                        <img class="d-block w-100" src="assets/img/recording-pics/devin_tracking_bass.jpg" alt="Devin tracking bass">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/adam_tracking_drums.jpg" alt="Adam tracking drums">
+                        <img class="d-block w-100" src="assets/img/recording-pics/adam_tracking_drums.jpg" alt="Adam tracking drums">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/chris_at_desk.jpg" alt="Chris at desk">
+                        <img class="d-block w-100" src="assets/img/recording-pics/chris_at_desk.jpg" alt="Chris at desk">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/dev.JPG" alt="Devin smiling">
+                        <img class="d-block w-100" src="assets/img/recording-pics/dev.JPG" alt="Devin smiling">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/getting_drum_sounds.JPG" alt="Getting drum sounds">
+                        <img class="d-block w-100" src="assets/img/recording-pics/getting_drum_sounds.JPG" alt="Getting drum sounds">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/devin_tracking_bass_2.JPG" alt="Devin tracking bass again">
+                        <img class="d-block w-100" src="assets/img/recording-pics/devin_tracking_bass_2.JPG" alt="Devin tracking bass again">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/adam_setting_up.JPG" alt="Adam getting sounds">
+                        <img class="d-block w-100" src="assets/img/recording-pics/adam_setting_up.JPG" alt="Adam getting sounds">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/drums_miced_up.JPG" alt="Drums miced up">
+                        <img class="d-block w-100" src="assets/img/recording-pics/drums_miced_up.JPG" alt="Drums miced up">
                         </div>
                         <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/imgs/recording-pics/adam.JPG" alt="Adam">
+                        <img class="d-block w-100" src="assets/img/recording-pics/adam.JPG" alt="Adam">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
