--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <img src="assets/img/PP-SAAFE-Window.png" class="img-fluid" />
                 </div>
                 <div class="col-lg-6 col-sm-12 mt-3">
-                    <div class="row">
+                    <div class="row" id="album-info">
                         <div class="col-6">
                             <h2>Pity Pattern</h2>
                         </div>
@@ -91,7 +91,7 @@
     </section>
     <section id="video">
         <div class="container">
-            <div class="row my-3">
+            <div class="row my-3 section-header">
                 <h3>Hey, we're Pity Pattern.</h3>
             </div>
         </div>
@@ -103,7 +103,7 @@
     </section>
     <section id="recording-pics">
         <div class="container">
-            <div class="row my-3">
+            <div class="row my-3 section-header">
                 <h3>Recording (2018)</h3>
             </div>
         </div>
@@ -166,7 +166,7 @@
     </section>
     <section id="shows">
         <div class="container">
-            <div class="row my-3">
+            <div class="row my-3 section-header">
                 <h3>Shows</h3>
             </div>
         </div>
