Updates tour widget styling, pulls services from header

--- a/index.html
+++ b/index.html
@@ -59,19 +59,13 @@
                 </div>
                 <div class="col-lg-6 col-sm-12 mt-3">
                     <div class="row" id="album-info">
-                        <div class="col-6">
-                            <h2>Pity Pattern</h2>
-                        </div>
-                        <div class="col-6 text-right">
-                            <h2>Sorry, As Always, For Everything.</h2>
-                        </div>
+                        <div class="col">
+                            <h2>Pity Pattern</h2><br>
+                            <h2>Sorry, As Always, For Everything.</h2><br>
+                            <h2>Available 1/8/2019</h2>
+                        </div> 
                     </div>
-                    <div class="row">
-                        <div class="col text-center">
-                            <h2>1/8/2019</h2>
-                        </div>
-                    </div>
-                    
+                    <!----
                     <div class="row mx-auto mt-4 rounded">
                         <div class="my-auto mx-auto col-7">
                             <img src="assets/img/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo" />
@@ -85,6 +79,7 @@
                             <img src="assets/img/logos/Apple_Music_Logo.png" class="img-fluid service-logo" />
                         </div> 
                     </div>
+                -->
                 </div>
             </div>    
         </div>
@@ -171,7 +166,7 @@
             </div>
         </div>
         <div class="container">
-            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Pity Pattern" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#000000" data-link-color="#00b4b3" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-link-text-color="#FFFFFF" data-display-lineup="false" data-separator-color="rgba(255, 255, 255, 0.5)"></a>
+            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Pity Pattern" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#ffffff" data-link-color="#00b4b3" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-link-text-color="#FFFFFF" data-display-lineup="false" data-separator-color="rgba(255, 255, 255, 0.5)" data-font="Helvetica" data-display-track-button="false"></a>
         </div>
     </section>
 
