--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
-                    <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>
-                    <a class="nav-item nav-link" href="#shows">Shows</a>
-                    <a href="https://www.facebook.com/pitypattern/" class="my-auto fa fa-facebook"></a>
-                    <a href="https://www.instagram.com/pitypattern/" class="my-auto fa fa-instagram"></a>
-                    <a href="mailto:pitypattern@gmail.com" class="my-auto fa fa-envelope"></a>
+                        <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
+                        <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>
+                        <a class="nav-item nav-link" href="#shows">Shows</a>
                     </div>
+                </div>
+                <div class="row mx-auto">
+                    <a href="https://www.facebook.com/pitypattern/" class="fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/pitypattern/" class="fa fa-instagram"></a>
+                    <a href="https://twitter.com/pitypattern" class="fa fa-twitter"></a>
+                    <a href="mailto:pitypattern@gmail.com" class="fa fa-envelope"></a>
                 </div>
             </nav>
         </div>
@@ -55,7 +58,9 @@
         <div class="container">
             <div class="row" id="hero-row">
                 <div class="col-lg-6 col-sm-8 mx-auto mt-3">
-                    <img src="assets/img/PP-SAAFE-Window.png" class="img-fluid" />
+                    <a href="https://pitypattern.bandcamp.com/music/sorry-as-always-for-everything">
+                        <img src="assets/img/PP-SAAFE-Window.png" class="img-fluid" />
+                    </a>
                 </div>
                 <div class="col-lg-6 col-sm-12 mt-3">
                     <div class="row" id="album-info">
@@ -167,6 +172,19 @@
         </div>
         <div class="container">
             <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Pity Pattern" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#ffffff" data-link-color="#00b4b3" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-link-text-color="#FFFFFF" data-display-lineup="false" data-separator-color="rgba(255, 255, 255, 0.5)" data-font="Helvetica" data-display-track-button="false"></a>
+        </div>
+    </section>
+    <section id="footer">
+        <div class="container mb-3">
+            <div class="row">
+                <a href="https://www.facebook.com/pitypattern/" class="mx-auto fa fa-facebook"></a>
+                <a href="https://www.instagram.com/pitypattern/" class="mx-auto fa fa-instagram"></a>
+                <a href="https://twitter.com/pitypattern" class="mx-auto fa fa-twitter"></a>
+                <a href="mailto:pitypattern@gmail.com" class="mx-auto fa fa-envelope"></a>
+            </div>
+            <div class="row">
+                <p class="mx-auto">&copy;2018 Pity Pattern</p>
+            </div>
         </div>
     </section>
 
