Slight social icons update

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </section>
     <section id="footer">
         <div class="container mb-3">
-            <div class="row">
+            <div class="row mb-3">
                 <a href="https://www.facebook.com/pitypattern/" class="mx-auto fa fa-facebook"></a>
                 <a href="https://www.instagram.com/pitypattern/" class="mx-auto fa fa-instagram"></a>
                 <a href="https://twitter.com/pitypattern" class="mx-auto fa fa-twitter"></a>
