--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ml-auto">
+                    <!----<div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
                         <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>
                         <a class="nav-item nav-link" href="#shows">Shows</a>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="row mx-auto">
                     <a href="https://www.facebook.com/pitypattern/" class="fa fa-facebook"></a>
