updates yt link

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="container-fluid">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nRbTnE4QLxE"></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dj6xoAariE8"></iframe>
             </div>
         </div>
     </section>
