--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <body>
     <section id="nav">
         <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#"><h1>Pity Pattern</h1></a>
+            <nav class="navbar navbar-expand-lg navbar-dark mt-1">
+                <a class="navbar-left" href="#"><img src="/assets/img/PP-Square-White-250.png" style="height: 60px; border-radius: 50%"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -45,7 +45,7 @@
                         <a class="nav-item nav-link" href="#shows">Shows</a>
                     </div>-->
                 </div>
-                <div class="row mx-auto">
+                <div class="row ml-auto">
                     <a href="https://www.facebook.com/pitypattern/" class="fa fa-facebook"></a>
                     <a href="https://www.instagram.com/pitypattern/" class="fa fa-instagram"></a>
                     <a href="https://twitter.com/pitypattern" class="fa fa-twitter"></a>
@@ -72,9 +72,9 @@
                 <div class="col-lg-6 col-sm-12 mt-3">
                     <div class="row" id="album-info">
                         <div class="col">
-                            <h2>Pity Pattern</h2><br>
+                            <h3 style="font-weight: 800;">Pity Pattern</h3><br>
                             <h2>Sorry, As Always, For Everything.</h2><br>
-                            <h2>Available 1/22/2019</h2>
+                            <h4><em>Available 1/22/2019</em></h4>
                         </div> 
                     </div>
                     <!----
