--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark mt-1">
                 <a class="navbar-left" href="#"><img src="/assets/img/PP-Square-White-250.png" style="height: 60px; border-radius: 50%"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <!----<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button>-->
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <!----<div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
