Adds shows to nav and fixes bandsintown colors

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark mt-1">
                 <a class="navbar-left" href="#"><img src="/assets/img/PP-Square-White-250.png" style="height: 60px; border-radius: 50%"></a>
-                <!----<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>-->
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <!----<div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
-                        <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>
+                    <div class="navbar-nav ml-auto">
+                        <!----<a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
+                        <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>-->
                         <a class="nav-item nav-link" href="#shows">Shows</a>
-                    </div>-->
+                    </div>
                 </div>
                 <div class="row ml-auto">
                     <a href="https://www.facebook.com/pitypattern/" class="fa fa-facebook"></a>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="container">
-            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Pity Pattern" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#ffffff" data-link-color="#00b4b3" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-link-text-color="#FFFFFF" data-display-lineup="false" data-separator-color="rgba(255, 255, 255, 0.5)" data-font="Helvetica" data-display-track-button="false"></a>
+            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Pity Pattern" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#ffffff" data-link-color="#ffffff" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-link-text-color="#FFFFFF" data-display-lineup="false" data-separator-color="rgba(255, 255, 255, 0.5)" data-font="Helvetica" data-display-track-button="false"></a>
         </div>
     </section>
     <section id="footer">
