--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="video">
         <div class="container-fluid">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xQsAtT4agAg"></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xQsAtT4agAg?rel=0"></iframe>
             </div>
         </div>
     </section>
