--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <!----<a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
-                        <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>-->
+                        <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/music">Music</a>
+                        <!--<a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>-->
                         <a class="nav-item nav-link" href="#shows">Shows</a>
                     </div>
                 </div>
