Adds music video to site

--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
             <div class="row featured-video mb-4">
             </div>
             <div class="row">
-                <!----<div class="col-lg-4 col-sm-12 mb-2 mx-auto">
+                <div class="col-lg-4 col-sm-12 mb-2 mx-auto">
                     <div class="video-cover" id="bVgHk8hxWrc">
                         <div class="cover-img">
                             <i class="fa fa-play-circle-o fa-4x text-center"></i>
                             <img class="img-fluid hero-cover" alt="" src="/assets/img/cantread-cover.png" />
                         </div>
-                        <h5 class="my-2">Can't Read<br>(Music Video)</h5>
+                        <h5 class="p-2">Can't Read<br>(Music Video)</h5>
                     </div>
-                </div>-->
+                </div>
                 <div class="col-lg-4 col-sm-12 mb-2 mx-auto">
                     <div class="video-cover" id="vjDn5GowDS8">
                         <div class="cover-img">
@@ -152,6 +152,15 @@
                             <img class="img-fluid hero-cover" alt="" src="/assets/img/ridindirty-cover.png" />
                         </div>
                         <h5 class="p-2">Ridin' Dirty<br>(Album Promo)</h5>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12 mb-4 mx-auto">
+                    <div class="video-cover" id="xQsAtT4agAg">
+                        <div class="cover-img">
+                            <i class="fa fa-play-circle-o fa-4x text-center"></i>
+                            <img class="img-fluid hero-cover" alt="" src="/assets/img/intro-video-cover.png" />
+                        </div>
+                        <h5 class="p-2">Hey, We're Pity Pattern<br>(Album Promo)</h5>
                     </div>
                 </div>
             </div>
