--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <!--Intro Video-->
     <section id="intro">
         <div class="container-fluid">
-            <div class="hero-video-cover" id="xQsAtT4agAg">
+            <div class="hero-video-cover" id="bVgHk8hxWrc">
                 <div class="cover-img">
                     <i class="fa fa-play-circle-o fa-4x text-center"></i>
-                    <img class="img-fluid hero-cover" alt="" src="/assets/img/intro-video-cover.png" />
+                    <img class="img-fluid hero-cover" alt="" src="/assets/img/cantread-cover.png" />
                 </div>
             </div>
         </div>
