--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/releases">Music</a>
                         <a class="nav-item nav-link" href="#videos">Videos</a>
-                        <!--<a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>-->
+                        <a class="nav-item nav-link" href="https://pitypattern.bandcamp.com/merch">Merch</a>
                         <a class="nav-item nav-link" href="#shows">Shows</a>
                     </div>
                 </div>
