Record Links Baby

--- a/index.html
+++ b/index.html
@@ -87,21 +87,23 @@
                             <h4><em>Available 1/22/2019</em></h4>
                         </div> 
                     </div>
-                    <!----
                     <div class="row mx-auto mt-4 rounded">
                         <div class="my-auto mx-auto col-7">
-                            <img src="assets/img/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo" />
+                            <a href="https://open.spotify.com/artist/2EFO3laid2zP7GsGI5y7Am?si=VYhDXxnkQ0GyaiC5Xhy53Q">
+                                <img src="assets/img/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo" />
+                            </a>
                         </div> 
                         <div class="my-auto mx-auto col-7">
-                            <a href="https://pitypattern.bandcamp.com/music/sorry-as-always-for-everything">
+                            <a href="https://pitypattern.bandcamp.com/releases">
                                 <img src="assets/img/logos/bandcamp-logo.png" class="img-fluid service-logo" />
                             </a>
                         </div>
                         <div class="my-auto mx-auto col-7">
-                            <img src="assets/img/logos/Apple_Music_Logo.png" class="img-fluid service-logo" />
+                            <a href="https://itunes.apple.com/us/artist/pity-pattern/id1447899654">
+                                <img src="assets/img/logos/Apple_Music_Logo.png" class="img-fluid service-logo" />
+                            </a>
                         </div> 
                     </div>
-                -->
                 </div>
             </div>    
         </div>
