Updates OG info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    <title>Pity Pattern</title>
+    <meta property="og:title" content="Pity Pattern" />
+    <link rel="icon" type="image/png" href="/assets/img/vinyl.png">
+    <meta name="description" content="Pity Pattern is a rock band from Boston.">
+    <meta property="og:description" content="Pity Pattern is a rock band from Boston.">
+    <meta property="og:image" content="/assets/img/promo.jpg">
+    <meta property="og:title" content="Pity Pattern">
      
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130572817-1"></script>
@@ -11,10 +19,6 @@
 
     gtag('config', 'UA-130572817-1');
     </script>
-
-    <title>Pity Pattern</title>
-    <meta property="og:title" content="Pity Pattern" />
-    <link rel="icon" type="image/png" href="/assets/img/vinyl.png">
     
     <!-- Required meta tags -->
     <meta charset="utf-8">
