--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h4><em>Available 1/22/2019</em></h4>
                         </div> 
                     </div>
-                    <div class="row mx-auto mt-4 rounded">
+                    <!----<div class="row mx-auto mt-4 rounded">
                         <div class="my-auto mx-auto col-lg-4 col-sm-10">
                             <a href="https://open.spotify.com/artist/2EFO3laid2zP7GsGI5y7Am?si=VYhDXxnkQ0GyaiC5Xhy53Q">
                                 <img src="assets/img/logos/Spotify_Logo_CMYK_White.png" class="img-fluid service-logo spotify" />
@@ -107,7 +107,7 @@
                                 <img src="assets/img/logos/bandcamp-logo.png" class="img-fluid service-logo bandcamp" />
                             </a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>    
         </div>
