--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/assets/img/vinyl.png">
     <meta name="description" content="Pity Pattern is a rock band from Boston.">
     <meta property="og:description" content="Pity Pattern is a rock band from Boston.">
-    <meta property="og:image" content="/assets/img/promo.jpg">
+    <meta property="og:image" content="/assets/img/pp_og.jpg">
     <meta property="og:title" content="Pity Pattern">
      
     <!-- Global site tag (gtag.js) - Google Analytics -->
