--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
 
     <title>Pity Pattern</title>
-    <meta property="og:title" content="Pity Pattern" />
     <link rel="icon" type="image/png" href="/assets/img/vinyl.png">
-    <meta name="description" content="Pity Pattern is a rock band from Boston.">
-    <meta property="og:description" content="Pity Pattern is a rock band from Boston.">
-    <meta property="og:image" content="/assets/img/pp_og.jpg">
-    <meta property="og:title" content="Pity Pattern">
+    <meta name="description" content="Pity Pattern is a rock band from Boston." />
+    <meta property="og:title" content="Pity Pattern" />
+    <meta property="og:description" content="Pity Pattern is a rock band from Boston." />
+    <meta property="og:image" content="http://pitypattern.com/assets/img/pp_og.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="544299992736654" />
      
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130572817-1"></script>
