--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:description" content="Pity Pattern is a rock band from Boston." />
     <meta property="og:image" content="http://pitypattern.com/assets/img/pp_og.jpg" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://pitypattern.com" />
     <meta property="fb:app_id" content="544299992736654" />
      
     <!-- Global site tag (gtag.js) - Google Analytics -->
